# raytracing

./: CMakeLists.txt  build.bat  build.sh
src/: main.c
src/camera/: camera.h
src/material/: material.h
src/objects/: objects.h  sphere.h  triangle.h  volume.h
src/renderer/: buffer.c  buffer.h  commands.c  commands.h  compute_pipeline.c  compute_pipeline.h  descriptors.c  descriptors.h  graphics_pipeline.c  graphics_pipeline.h  image.c  image.h  renderer.c  renderer.h  swapchain.c  swapchain.h  vk_types.h
src/shaders/: shader.frag  shader.vert  trace.comp
src/spvs/: frag.spv  trace.spv  vert.spv
